--- a/src/components/search_header/search_header.module.css
+++ b/src/components/search_header/search_header.module.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   height: 4rem;
-  padding: 0.8rem 1em;
+  padding: 0.8em 1em;
   background: black;
   color: white;
 }
@@ -21,7 +21,6 @@
 .button {
   background-color: darkgrey;
   outline: 0;
-  cursor: pointer;
 }
 
 .buttonImg {
