--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -1,6 +1,13 @@
 .container {
-  width: 50%;
   padding: 0.2em;
+}
+
+.container.grid {
+  width: 50%;
+}
+
+.container.list {
+  width: 100%;
 }
 
 .video {
@@ -8,7 +15,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  border: 1px solid lightgrey;
+  border: 1px solid lightgray;
   box-shadow: 3px 3px 5px 0px rgba(191, 191, 191, 0.53);
   cursor: pointer;
   transition: transform 250ms ease-in;
@@ -27,7 +34,8 @@
   margin-left: 0.2em;
 }
 
-.title, .channel {
+.title,
+.channel {
   margin: 0;
   font-size: 0.8rem;
 }
